<resources>
    <string name="app_name">Personal Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">To Do Lists</string>
    <string name="title_notifications">Daily Expenses</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="logo">logo</string>
    <string name="create_a_new_account">Create a new Account</string>
    <string name="email">Email</string>
    <string name="register">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="prayer_api">f8b1de686f9d4bfa0fcf8ecb6b7adad3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="select_date">Select Date</string>
    <string name="add_task">Add Task</string>
    <string name="select_time">Select Time</string>
    <string name="_02_20_pm">02:20 PM</string>
    <string name="expense_title">Expense Title</string>
    <string name="add_expense">Add Expense</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="amount">Amount:</string>
    <string name="_10000">10000</string>
    <string name="date">Date:</string>
    <string name="wed_12_2018">wed 12 2018</string>
    <string name="_1">1.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="maghrib">Maghrib</string>
    <string name="dhuhr">Dhuhr  </string>
    <string name="fazr">Fazr     </string>
    <string name="asr">Asr    </string>
    <string name="isha">Isha   </string>
    <string name="search">Search</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="go_to_super_market">Go to super market</string>
    <string name="_5_10_am">5:10 AM</string>
    <string name="_7_feb">7 Feb</string>
    <string name="location">Location</string>
    <string name="bangladesh">Bangladesh</string>
    <string name="prayer_timings">Prayer Timings</string>
    <string name="logout">Logout</string>
</resources>
