<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorAccent"
android:id="@+id/loginActivity"
tools:context=".activities.LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/armata"
        android:text="@string/email"
        android:textColor="@android:color/white"
        android:textSize="20sp"

        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/email"
        android:fontFamily="@font/armata"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:id="@+id/passText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/armata"
        android:text="@string/password"
        android:textColor="@android:color/white"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:id="@+id/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/forgot_password"
        android:textStyle="normal"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:fontFamily="@font/armata"
        android:gravity="end"
        android:linksClickable="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/armata"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/createAcc"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/create_a_new_account"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/armata"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="20dp"/>

</LinearLayout>

</ScrollView>