<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:background="#2471A3"
        android:weightSum="2"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toDoText"
            android:layout_weight="1"
            android:padding="5dp"
            android:fontFamily="@font/armata"
            android:text="@string/go_to_super_market"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toDoClock"
            android:text="@string/_5_10_am"
            android:textStyle="bold"
            android:fontFamily="@font/armata"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:layout_weight="0.5"
            android:text="@string/_7_feb"
            android:fontFamily="@font/armata"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="italic"
            android:padding="2dp"/>



    </LinearLayout>

</androidx.cardview.widget.CardView>


